--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -135,7 +135,7 @@ input.ajust-input, textarea.ajust-input {
 
 #menu-categories{
 	height: 395px;
-	width: 195px;
+	width: 160px;
 	margin-bottom: 20px;
 	background-color:#AAD0FF;
 	margin-top: 15px;
@@ -143,10 +143,10 @@ input.ajust-input, textarea.ajust-input {
 	
 	.image{
 		padding-top: 15px;
-		padding-left: 35px;
+		margin-left: 40px;
 		
 		.categ{
-			padding-left: 20px;
+			padding-left: 10px;
 			font-size:15px;
 			color: #000000;
 			font-family:"gotham";
@@ -213,10 +213,6 @@ input.ajust-input, textarea.ajust-input {
 			color: #FFF;
 			padding-left: 8px;
 			padding-top:2px;
-			
-			.texte:hover{
-				color: black;
-			}
 		}
 		
 		.texte2{
@@ -226,10 +222,6 @@ input.ajust-input, textarea.ajust-input {
 			color: #FFF;
 			padding-left: 12px;
 			padding-top:2px;
-			
-			.texte:hover{
-				color: black;
-			}
 		}
 		
 		.arrow-left{
@@ -243,9 +235,12 @@ input.ajust-input, textarea.ajust-input {
 		}
 		
 		}
-	
+		
+		.follow:hover{
+			background-color: black;
+		}
 		.categorie{
-		margin-top:20px;
+		margin-top:8px;
 		margin-left:-20px;
 		height:65px;
 		width:90px;
@@ -279,6 +274,48 @@ input.ajust-input, textarea.ajust-input {
 		padding-top: 40px;
 		}
 		
+		.jugeoubref{
+			background-color: white;
+			height: 16px;
+			text-align: center;
+			margin-top:7px;
+			margin-left:-15px;
+			padding-bottom: 0px;
+			color: black;
+			font-family: "georgia";
+			font-size: 12px;
+			font-style: italic;
+			
+			.texte{
+				margin: -17px 0px 0px -137px;
+				color: black;
+				font-family: "georgia";
+				font-size: 12px;
+				font-style: italic;
+
+			}	
+			.arrow-right {
+				
+				margin-left:0px;
+				width: 0; 
+				height: 0; 
+				border-top: 8px solid transparent;
+				border-bottom: 8px solid transparent;
+
+				border-left: 5px solid #C9C9C9;
+			}
+
+			.arrow-left {
+				margin: -17px 0px 0px 80px;
+				width: 0; 
+				height: 0; 
+				border-top: 8px solid transparent;
+				border-bottom: 8px solid transparent; 
+
+				border-right:5px solid #C9C9C9; 
+			}
+
+		}
 		.texte{
 		width:360px;
 		margin-top:12px;
@@ -318,9 +355,6 @@ input.ajust-input, textarea.ajust-input {
 			padding-left: 8px;
 			padding-top:2px;
 			
-			.texte:hover{
-				color: black;
-			}
 		}
 		
 		
@@ -331,10 +365,6 @@ input.ajust-input, textarea.ajust-input {
 			color: #FFF;
 			padding-left: 12px;
 			padding-top:2px;
-			
-			.texte:hover{
-				color: black;
-			}
 		}
 		.arrow-left{
 			margin-top:-20px;
@@ -347,9 +377,13 @@ input.ajust-input, textarea.ajust-input {
 		}
 		
 		}
+		
+		.follow:hover{
+			background-color: black;
+		}
 	
 		.categorie{
-		margin-top:20px;
+		margin-top:8px;
 		margin-left:-20px;
 		height:65px;
 		width:90px;
@@ -375,72 +409,131 @@ input.ajust-input, textarea.ajust-input {
 	width: 570px;
 	float:left;
 	
-	
-	#image-gauche{
-		border:1px solid #000000;
-		width:110px;
-		height:128px;
-		img { width: 110px; height:128px;}
+	#doulinnn{
+		margin-left: 0px;
 	}
+
+	#doulin-badge2{
+		margin-left: 0px;
+		width: 470px;
+		height: 128px;
+		background-color:#C9C9C9;
 		
-	#doulin-badge1{
-		min-height:130px;
-		width:247px;
-		background-color:#000000;
-		margin-left:0px;
-		margin-bottom:15px;
 		
-			.title{
-			margin: 10px 10px 10px 10px; 
-			color:white;
-			font-family:"gotham";
-			font-size:18px;
-			text-align:center;
+		#image-gauche{
+			width:116px;
+			height:128px;
+			margin-left:0px;
 			
-			.title:hover{
-				text-decoration: underline;
-			}
-			}
-			
-			.nom1{
-				margin-top:20px;
-			color:white;
-			font-family:"georgia";
-			font-size:15px;
-			text-align:left;
-			padding-left: 20px;
-			font-style:italic;
-			
-			.nom1:hover{
-				text-decoration: underline;
-			}
+			#image-doulinuser{
+				margin-left: 15px;
+				margin-top: 5px;
+					img { width: 86px; height:94px;}
+					.image{
+						width: 86px;
+						height: 94px;
+					}
 			}
 			
-			.nom2{
-				color:white;
-				font-family:"georgia";
-				font-size:15px;
-				text-align:right;
-				padding-right: 20px;
-				font-style:italic;
-				margin-top:-8px;
-				margin-bottom: 8px;
-				
-				.nom2:hover{
-					text-decoration: underline;
+			#badge2{
+			margin-top:7px;
+			width: 116px;
+			background-color: white;
+			margin-left: 0px;
+			text-align: center;
+			font-family: "georgia";
+			font-size: 11px;
+			font-style: italic;
+			font-weight: bold;	
+			height: 11px;
+			padding-bottom:5px;
+				div{
+					display: inline-block;
+				}
+
+				.arrow-left {
+					float:right;
+					width: 0; 
+					height: 0; 
+					border-top: 8px solid transparent;
+					border-bottom: 8px solid transparent; 
+
+					border-right:8px solid #C9C9C9; 
 				}
 			}
-			
+		}
+		
+		#doulin-badge1{
+			min-height:128px;
+			width:238px;
+			margin-left:0px;
+			margin-bottom:15px;
+
+				.title{
+				margin: -110px 10px 10px 10px; 
+				color:white;
+				font-family:"gotham";
+				font-size:18px;
+				text-align:center;
+				color: black;
+					.title2{
+						color: black;
+					}
+				.title:hover{
+					text-decoration: underline;
+				}
+				}
+				
+				.image{
+					margin-top: 5px;
+				}
+		}
+		
+		#image-droite{
+				width:116px;
+				height:128px;
+				margin-left:0px;
+
+				#image-doulinuser{
+					margin-left: 15px;
+					margin-top: 5px;
+						img { width: 86px; height:94px;}
+						.image{
+							width: 86px;
+							height: 94px;
+						}
+				}
+
+				#badge2{
+				margin-top:7px;
+				width: 116px;
+				background-color: white;
+				margin-left: 0px;
+				text-align: center;
+				font-family: "georgia";
+				font-size: 11px;
+				font-style: italic;
+				font-weight: bold;	
+				height: 11px;
+				padding-bottom:5px;
+					div{
+						display: inline-block;
+					}
+
+					.arrow-right {
+						float:left;
+						width: 0; 
+						height: 0; 
+						border-top: 8px solid transparent;
+						border-bottom: 8px solid transparent; 
+
+						border-left:8px solid #C9C9C9; 
+					}
+				}
+			}
+		
 	}
-	
-	#image-droite{
-		margin-left:0px;
-		border:1px solid #000000;
-		width:110px;
-		height:128px;
-		img { width: 110px; height:128px;}
-	}
-	
+
 	
 	.follow{
 	margin-left:-20px;
@@ -456,9 +549,6 @@ input.ajust-input, textarea.ajust-input {
 		padding-left: 8px;
 		padding-top:2px;
 		
-		.texte:hover{
-			color: black;
-		}
 	}
 	
 	.texte2{
@@ -468,10 +558,7 @@ input.ajust-input, textarea.ajust-input {
 		color: #FFF;
 		padding-left: 12px;
 		padding-top:2px;
-		
-		.texte:hover{
-			color: black;
-		}
+
 	}
 	.arrow-left{
 		margin-top:-20px;
@@ -485,9 +572,12 @@ input.ajust-input, textarea.ajust-input {
 	
 	}
 	
+	.follow:hover{
+		background-color: black;
+	}
 	.categorie{
 	margin-left:-20px;
-	margin-top:20px;
+	margin-top:8px;
 	height:65px;
 	width:90px;
 	background-color:#AAD0FF;
