--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -162,7 +162,7 @@
 	height: 25px;
 	margin-left:1px;
 	margin-top:5px;
-	border-top: 2px Dashed;
+	border-top: 1px dashed;
 	padding-top:5px;
 	font-family:"gotham";
 	font-size:18px;
