--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -134,3 +134,24 @@
 	margin-bottom: 15px;
 	}
 }
+
+#show-group{
+	
+	#group-header{
+	margin: 20px 0px 0px 232px;
+	}
+	
+	.image2{
+	height: 400px;
+	width: 596px;
+	margin-top: -120px;
+	text-align: center;
+		.text{
+		margin-top: -50px;
+		font-family: "gotham";
+		font-size: 25px;
+		color: black;
+		
+		}
+	}
+}
