--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -14,44 +14,27 @@
 			</div>
 			
 			<div class="row" id="maincontent-new">
-				<div class="content1">
+				<div class="span5" id="content1">
 					<div class="row" id="type-deb">
 						<div>
 							<div class="emotion2" id='typedeb1'>
 								<%= radio_button_tag "challenge[type_deb]", 2, @challenge.type_deb == 2, :checked => 2 %>
-								<label for="challenge_type_deb_2" class="choix1"><span class= "texte">Duel</br> face-à-face</span></label>
+								<label for="challenge_type_deb_2" class="selected" id="choix1"><span class= "texte">Duel</br> face-à-face</span><%= image_tag ("new-challenge.png"), class: "image"%>
+									</label>
 								
 								<%= radio_button_tag "challenge[type_deb]", 3, @challenge.type_deb == 3 %>
-								<label for="challenge_type_deb_3" class="choix2"><span class= "texte">Duel par équipe</span></label>
+								<label for="challenge_type_deb_3" class="non-selected" id="choix2"><span class= "texte">Duel</br>par équipe</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
 							</div>
 							<div class="emotion2" id='typedeb2'>
 								<%= radio_button_tag "challenge[type_deb]", 4, @challenge.type_deb == 4 %>
-								<label for="challenge_type_deb_4" class="choix3"><span class= "texte">Quatre coins</br> individuel</span></label>
+								<label for="challenge_type_deb_4" class="non-selected" id="choix3"><span class= "texte">Quatre coins</br> individuel</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
 					    	
 								
 								<%= radio_button_tag "challenge[type_deb]", 8, @challenge.type_deb == 8 %>
-								<label for="challenge_type_deb_8" class="choix4"><span class= "texte">Quatre coins par équipe</span></label>
+								<label for="challenge_type_deb_8" class="non-selected" id="choix4"><span class= "texte">Quatre coins par équipe</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
 																					
 							</div>
-							<div>	<%= image_tag ("signe-defi.png"), class: "image2"%></div>
-						<div>
-						<div class="emotion3" id="typedeb3">
-							<%= radio_button_tag "challenge[jugebreve]", 0, @challenge.jugebreve == 0, :checked => 0 %>
-							<label for="challenge_jugebreve_0" class="choix1"><span class= "texte">Brève</span></label>
-							
-							<%= radio_button_tag "challenge[jugebreve]", 1, @challenge.jugebreve == 1 %>
-							<label for="challenge_jugebreve_1" class="choix2"><span class= "texte">Avec Juges</span></label>
-						</div>						
-					</div>
-					
-					<div class="row" id="tags_challenge">
-						<%= f.text_field :tag_list, class: "tags", placeholder: "Tag1, Tag2, Tag3 ..."%>
-					</div>
-				</div>
-				
-				<div class="content2">
-					<div class="row" id="description-challenge">
-						<%= f.text_area :context, class: "description", placeholder: "Description" %>	
+						<div>	
 					</div>
 					<div class="row" id="category_list">
 						<div class="intro">
@@ -76,8 +59,24 @@
 							<label for ="challenge_cat_id_8"><%= image_tag ("cat-societe.png")%></label>							
 						</div>
 					</div>
+				</div>
+				
+				<div class= "span5" id="content2">
+					<div class="row" id="description-challenge">
+						<%= f.text_area :context, class: "description", placeholder: "Description" %>	
+					</div>
+					<div class="emotion2" id="typedeb3">
+						<%= radio_button_tag "challenge[jugebreve]", 0, @challenge.jugebreve == 0, :checked => 0 %>
+						<label for="challenge_jugebreve_0" class="selected" id="choix5"><span class= "texte">Débat Bref</span></label>
+						
+						<%= radio_button_tag "challenge[jugebreve]", 1, @challenge.jugebreve == 1 %>
+						<label for="challenge_jugebreve_1" class="non-selected" id="choix6"><span class= "texte">Avec Juges</span></label>
+					</div>
+					<div class="row" id="tags_challenge">
+						<%= f.text_field :tag_list, class: "tags", placeholder: "Tag1, Tag2, Tag3 ..."%>
+					</div>
 					<div class="row" id='submit-challenge'>
-							<%= f.submit "Create a debate", class: "action" %>
+							<%= f.submit "Créér le débat", class: "action" %>
 							<% end %>
 					</div>
 						
