--- a/app/views/shared/_challenge_badge.html.erb
+++ b/app/views/shared/_challenge_badge.html.erb
@@ -4,8 +4,16 @@
 				<div class="row">
 					<div class="span1" id="challenge-badge2">
 						<%= image_tag("signe-defi.png", alt: "Moutoners")%>
+						<div class="jugeoubref">
+							<div class="arrow-right"></div>
+							<% if challenge.jugebreve == 1%>
+							<div class="texte">Avec juges</div>
+							<% else%>
+							<div class="texte">Débat bref</div>
+							<% end%>
+							<div class="arrow-left"></div>
+						</div>
 					</div>
-					
 					<div class="span4">
 						<div class="texte">
 							<%= image_tag("text-badge.png", alt: "Moutoners", class: "image")%>
