--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -298,18 +298,30 @@
 #sign_in{
 		
 	.logo2{
-	margin: 15px 0px 50px 325px;
+	margin: 90px 0px 50px 325px;
+	
+	.titre{
+	margin-left: -75px;
+	margin-top:10px;
+	}
+		.title{
+		font-family: "gotham";
+		font-size: 48px;
+		line-spacing: -25px;
+		color: black;
+		}
 	}
 	
 	.facebook{
-	margin-left: 235px;
+	margin-left: 100px;
 	margin-top: 40px;
-	background-color: #808080;
-	height:34px;
-	width: 260px;
+	background-color: #A3A3A3;
+	height:50px;
+	width: 530px;
+	border-radius: 12px;
 	padding-top:15px;
  	text-align: center;
-	color: white;
+	color: black;
 	line-height: 20px;
 	font-weight: bold;
 	font-family:"gotham";
@@ -320,7 +332,7 @@
 	font-weight: bold;
 	font-family:"gotham";
 	font-size: 18px;
-	color: black;
+	color: white;
 	margin-left: 15px;
 	}
 	}
@@ -340,10 +352,10 @@
 	background-color: #AAD0FF;
 	border-radius: 13px;
 	margin-left: 100px;
-	margin-bottom: 40px;
+	height: 320px;
 	
 		#sign_in3{
-		margin-top: 0px;
+		margin-top: 50px;
 		margin-left: 15px;
 		
 			#sign_in4{
@@ -389,7 +401,7 @@
 					padding-left: 5px;
 					font-family: "gotham";
 					font-weight: bold;
-					font-size:11px;
+					font-size:13px;
 					margin-right: 40px;
 					}
 					.submit-login{
@@ -406,13 +418,16 @@
 		}
 		
 		#sign_up{
-		margin-top: 0px;
 		margin-left: 15px;
 		margin-right: 15px;
 		float: right;
 		padding-left: 25px;
-		border-left: 3px Solid black;
-		
+		border-left: 3px Solid white;
+			
+			.espace{
+			height: 50px;
+			width: 10px;
+			}
 			#sign_in4{
 			margin-left: 0px;
 			margin-top: 15px;
