--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -1,58 +1,65 @@
-<div class="container" id="sign_in">
-	<div class="row" id="sign_in1">
-		Il faut être connecté pour faire cela
-	</div>
-	
-	<div class="facebook">
-		<span>via</span><%=link_to "FACEBOOK", user_omniauth_authorize_path(:facebook),
-		  													class: "via"%>
-	</div>
-	
-	<div class="row" id="sign_in2">
-		<div class="span3" id="sign_in3">
-			<div class="row" id="sign_in4">
-				<span class="texte1">Connecte toi !</span>
+<section id="doulin-badge">
+	<div class="row">
+		
+		<div class="span2" id="image-gauche">
+			<div class="row" id="image-doulinuser">
+				<%= image_tag doulin.first_user.avatar.url(:medium), class: "gauche" %>
 			</div>
-			<div class="row" id= "sign_in4">
-				<%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
-				<%= f.email_field :email, :autofocus => true, placeholder: "Mail:", class: "login-field" %>
-			</div>
-			<div class="row" id= "sign_in4">
-				<%= f.password_field :password, placeholder: "Mot de Passe:", class: "login-field1"%>
-			</div>
-			<div class="row" id= "sign_in4">
-				
-					<span class="texte"><%= link_to "Mot de passe oublié?", root_path, class: "lien"%>
-					</span>
-					<%= f.submit "OK", class: "submit-login" %>
-				<% end%>
+			<div class="row" id="badge2">
+				<div class='texte'><%= link_to doulin.first_user.fitting_name, doulin.first_user, class: "nom1"%>
+				</div>
+				<div class="arrow-left"></div>
 			</div>
 		</div>
-
-		<div class="span3" id="sign_up">
-			<div class="row" id="sign_in4">
-				<span class="texte1"> Inscris toi !</span>
-			</div>
-			<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-			  <%= devise_error_messages! %>
-
-			  <div class="row" id="sign_in4">
-			  <%= f.text_field :name, placeholder: "Pseudo:", class: "login-field" %>
-			  </div>
-			<div class="row" id= "sign_in4">
-				<%= f.email_field :email, :autofocus => true, placeholder: "Mail:", class: "login-field" %>
-			</div>
-			<div class="row" id= "sign_in4">
-				<%= f.password_field :password, placeholder: "Mot de Passe:", class: "login-field1"%><%= f.submit "OK", class: "submit-login" %>	
-			</div>
-			<div class="row" id= "sign_in4">
-				
-			<% end%>
-			</div>
-		</div>	
-	</div>
-	<div class="logo2">
-		<%= image_tag "gros-mouton-01.png"%>
-	</div>
 		
-</div>
+		<div class="span4" id="doulin-badge1">
+			<div class="title">
+				<%= link_to doulin.title, doulin, class: "title"%>
+			</div>
+			<div class="nom1">
+				<%= link_to doulin.first_user.fitting_name, doulin.first_user, class: "nom1"%>
+			</div>
+			<div class="nom2">
+				<%= link_to doulin.second_user.fitting_name, doulin.second_user, class: "nom2"%>
+			</div>
+		</div>
+		
+		<div class="span2" id='image-droite'>
+			<%= image_tag doulin.second_user.avatar.url(:medium), class: "droite" %>
+		</div>
+		
+		<div class="span1">
+			<div class="follow">
+			<% if current_user && current_user.following?(doulin)%>
+				<div class="texte2"><%= link_to"Fuir", unfollow_doulin_path(doulin), class: "texte"%></div>
+			<% else %>
+				<div class="texte"><%= link_to"Suivre", follow_doulin_path(doulin), class: "texte"%></div>
+			<% end %>
+				<div class="arrow-left"></div>
+			</div>
+	
+			<div class="categorie">
+			  	<div class="arrow-left"></div>
+			  	<div class="image">
+			  	<% if doulin.cat_id == 1 %>
+			  		<%= link_to image_tag("cat-sports.png", :alt => 'Moutoners'), list_path(:cat => 1)%>
+			  	<%elsif doulin.cat_id == 2 %>
+			  		<%= link_to image_tag("cat-quotidien.png", :alt => 'Moutoners'), list_path(:cat => 2)%>
+			  	<%elsif doulin.cat_id == 3 %>
+			  		<%= link_to image_tag("cat-monde.png", :alt => 'Moutoners'), list_path(:cat => 3)%>
+			  	<%elsif doulin.cat_id == 4 %>
+			  		<%= link_to image_tag("cat-economie.png", :alt => 'Moutoners'), list_path(:cat => 4)%>
+			  	<%elsif doulin.cat_id == 5 %>
+			  		<%= link_to image_tag("cat-culture.png", :alt => 'Moutoners'), list_path(:cat => 5)%>
+			  	<%elsif doulin.cat_id == 6 %>
+			  	 	<%= link_to image_tag("cat-sciences.png", :alt => 'Moutoners'), list_path(:cat => 6)%>
+			  	<%elsif doulin.cat_id == 7 %>
+			  		<%= link_to image_tag("cat-philosophie.png", :alt => 'Moutoners'), list_path(:cat => 7)%>
+			  	<%elsif doulin.cat_id == 8 %>
+			  		<%= link_to image_tag("cat-societe.png", :alt => 'Moutoners'), list_path(:cat => 8)%>
+			  	<%end%>
+			  	</div>
+			</div>
+		</div>
+	</div>
+</section>
